# wayland-wall

./: .gitignore  Makefile.am  README.md  configure.ac  meson.build  scan.sh  wayland-wall.pc.in
orbment/: orbment.mk
orbment/src/: notification-area.c  wlc-notification-area.c  wlc-notification-area.h
pkgconfig/: wayland-notification-area.pc.in
protocol/: notification-area-unstable-v1.xml  notification-area-unstable-v2.xml
src/: background.c  dock.c  helpers.h
unstable/background/: background-unstable-v1.xml  background-unstable-v2.xml
unstable/dock-manager/: dock-manager-unstable-v1.xml
weston/: weston.mk
weston/src/: notification-area.c
wlc/: wlc.mk
wlc-notification-area/: wlc-notification-area.mk
wlc-notification-area/pkgconfig/: wlc-notification-area.pc.in
wlc-notification-area/src/: wlc-notification-area.c
wlc/include/: wayland-wall-wlc.h
wlc/pkgconfig/: wayland-wall-wlc.pc.in
wlc/src/: wlc-notification-area.c
